# dataset-labelling-tool

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CPackConfig.cmake  CPackSourceConfig.cmake  Coursework  Coursework.cbp  Doxyfile  LICENSE  README.md  build.sh  dataset-labeling-tool  dataset-labeling-tool.cbp  dataset-labelling-tool.pro  requirements.txt
build-gui-Desktop_Qt_5_13_2_GCC_64bit-Debug/: gui
build-gui-Desktop_Qt_5_13_2_GCC_64bit-Debug/gui_autogen/EWIEGA46WW/: moc_gui.cpp
build-gui-Desktop_Qt_5_13_2_GCC_64bit-Debug/gui_autogen/include/: ui_gui.h
docs/html/: AnnotationController_8cpp.html  AnnotationController_8cpp__incl.map  AnnotationController_8cpp__incl.md5  AnnotationController_8h.html  AnnotationController_8h__dep__incl.map  AnnotationController_8h__dep__incl.md5  AnnotationController_8h__incl.map  AnnotationController_8h__incl.md5  AnnotationController_8h_source.html  AnnotationModel_8cpp.html  AnnotationModel_8cpp__incl.map  AnnotationModel_8cpp__incl.md5  AnnotationModel_8h.html  AnnotationModel_8h__dep__incl.map  AnnotationModel_8h__dep__incl.md5  AnnotationModel_8h__incl.map  AnnotationModel_8h__incl.md5  AnnotationModel_8h_source.html  ClassController_8cpp.html  ClassController_8cpp__incl.map  ClassController_8cpp__incl.md5  ClassController_8h.html  ClassController_8h__dep__incl.map  ClassController_8h__dep__incl.md5  ClassController_8h__incl.map  ClassController_8h__incl.md5  ClassController_8h_source.html  ClassModel_8cpp.html  ClassModel_8cpp__incl.map  ClassModel_8cpp__incl.md5  ClassModel_8h.html  ClassModel_8h__dep__incl.map  ClassModel_8h__dep__incl.md5  ClassModel_8h__incl.map  ClassModel_8h__incl.md5  ClassModel_8h_source.html  GraphicsView_8h_source.html  ImageController_8cpp.html  ImageController_8cpp__incl.map  ImageController_8cpp__incl.md5  (+191 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  files_0.js  files_1.js  files_3.js  files_5.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+10 more)
docs/latex/: annotated.tex  classAnnotationController.tex  classAnnotationController__coll__graph.md5  classAnnotationModel.tex  classAnnotationModel__coll__graph.md5  classArrayEmptyError.tex  classArrayEmptyError__coll__graph.md5  classArrayEmptyError__inherit__graph.md5  classClassController.tex  classClassController__coll__graph.md5  classClassModel.tex  classClassModel__coll__graph.md5  classClassNotFoundError.tex  classClassNotFoundError__coll__graph.md5  classClassNotFoundError__inherit__graph.md5  classClassNotSelectedError.tex  classClassNotSelectedError__coll__graph.md5  classClassNotSelectedError__inherit__graph.md5  classDrawingIncomplete.tex  classDrawingIncomplete__coll__graph.md5  classDrawingIncomplete__inherit__graph.md5  classFileNotFoundError.tex  classFileNotFoundError__coll__graph.md5  classFileNotFoundError__inherit__graph.md5  classFolderNotFoundError.tex  classFolderNotFoundError__coll__graph.md5  classFolderNotFoundError__inherit__graph.md5  classGraphicsView.tex  classGraphicsView__coll__graph.md5  classGraphicsView__inherit__graph.md5  classImageController.tex  classImageController__coll__graph.md5  classImageModel.tex  classImageNotAnnotatedYet.tex  classImageNotAnnotatedYet__coll__graph.md5  classImageNotAnnotatedYet__inherit__graph.md5  classIndexOutOfBoundsError.tex  classIndexOutOfBoundsError__coll__graph.md5  classIndexOutOfBoundsError__inherit__graph.md5  classLinkedList.tex  (+17 more)
gui/: CMakeLists.txt  gui.cpp  gui.h  gui.ui
include/: AnnotationController.h  AnnotationModel.h  ClassController.h  ClassModel.h  GraphicsView.h  ImageBrowser.h  ImageController.h  ImageModel.h  LinkedList.h  LinkedListNode.h  MainController.h  MainView.h  MainView.ui  dummyclass.h  exceptions.h  gui.h  linkedlist.h  maincontroller.h  ui_gui.h  win_dirent.h
src/: AnnotationController.cpp  AnnotationModel.cpp  ClassController.cpp  ClassModel.cpp  GraphicsView.cpp  ImageBrowser.cpp  ImageController.cpp  ImageModel.cpp  LinkedList.cpp  MainController.cpp  MainView.cpp  RectangleDrawer.cpp  dummyclass.cpp  gui.cpp  gui.ui  linkedlist.cpp  main.cpp  maincontroller.cpp
test/: Boost_Tests  CMakeLists.txt  ImageBrowserTests.cpp  LinkedListTest.cpp  TheAbsoluteUnit.cpp  imageBrowserTests.cpp  linkedListTest.cpp  test1.cpp
test/gui_tests/: CMakeLists.txt  gui_test.cpp
tests/: AnnotationController-Tests.cpp  AnnotationControllerTests.cpp  AnnotationModel-Tests.cpp  AnnotationModelTests.cpp  CMakeLists.txt  ClassController-Tests.cpp  ClassControllerTests.cpp  ClassModel-Tests.cpp  ClassModelTests.cpp  ImageController-Tests.cpp  ImageControllerTests.cpp  ImageModel-Tests.cpp  ImageModelTests.cpp  LinkedLists-tests.cpp  LinkedListsTests.cpp  Tests.cpp
tests/testFiles/: test.annotation
